--- a/src/index.html
+++ b/src/index.html
@@ -3,7 +3,14 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <style>html,body{padding:0;margin:0;}</style>
+    <style>
+      html,
+      body {
+        padding: 0;
+        margin: 0;
+        font-family: "AP Var";
+      }
+    </style>
   </head>
   <body>
     <%= content %>
